--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ getset = "0.1.2"
 manycore_parser = { git = "https://github.com/joe2k01/manycore_parser.git", version = "0.1.2" }
 quick-xml = { version = "0.31.0", features = ["serialize"] }
 serde = "1.0.196"
+serde_json = "1.0.113"
