--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,17 @@
 [package]
 name = "manycore_svg"
-version = "0.1.8"
+version = "0.1.9"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+const_format = "0.2.32"
 getset = "0.1.2"
-manycore_parser = { git = "https://github.com/joe2k01/manycore_parser.git", version = "0.1.2" }
+manycore_parser = { git = "https://github.com/joe2k01/manycore_parser.git", version = "0.1.4" }
 quick-xml = { version = "0.31.0", features = ["serialize"] }
 serde = "1.0.196"
 serde_json = "1.0.113"
+
+[dev-dependencies]
+lazy_static = "1.4.0"
