--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "manycore_svg"
-version = "0.5.4"
+version = "0.5.5"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -10,7 +10,7 @@ const_format = "0.2.32"
 getset = "0.1.2"
 manycore_parser = { git = "https://github.com/joe2k01/manycore_parser.git", version = "0.5.0" }
 manycore_utils = { git = "https://github.com/joe2k01/manycore_utils.git", version = "0.1.0" }
-quick-xml = { version = "0.31.0", features = ["serialize"] }
+quick-xml = { git = "https://github.com/tafia/quick-xml.git", version = "0.31.0", features = ["serialize"] }
 serde = "1.0.196"
 serde_json = "1.0.113"
 
