--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,8 @@
 name = "manycore_svg"
 version = "0.5.7"
 edition = "2021"
+authors = ["Giuseppe Barillari"]
+license = "BSD-3-Clause-No-Military-License"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
