--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.5.7"
 edition = "2021"
 authors = ["Giuseppe Barillari"]
 license = "BSD-3-Clause-No-Military-License"
+repository = "https://github.com/ManyCore-Visualiser/manycore_svg"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
